# test_and_debug_course

src/: .gitignore  Dockerfile  backup_service_locator  config.json  docker-compose.yaml  log_config.json  main.py  pyproject.toml  service_locator.py  try.py
src/abstract_repositories/: iadvert_repository.py  icategory_repository.py  ideal_repository.py  ihistory_deal_repository.py  iliked_repository.py  iuser_repository.py
src/auth/: dependencies.py
src/controllers/: advert_controller.py  deals_controller.py  history_deal_controller.py  likes_controller.py  main_controller.py  user_controller.py
src/core/: create_jwt.py  db.py  db_backup.py  db_config.py  db_utils.py  logger.py
src/dto/: advert_dto.py  advert_dto_v1.py  history_deal_dto.py
src/i_sql_builders/: iadvert_sql_builder.py  icategory_sql_builder.py  ideal_sql_builder.py  ihistory_deal_sql_builder.py  iliked_sql_builder.py  iuser_sql_builder.py
src/migrations/: convert.sh  export_adv.sh  import_ch.sh
src/models/: advert.py  category.py  deal.py  history_deal.py  liked.py  user.py
src/repositories/: advert_repository.py  advert_repository_ch.py  category_repository.py  category_repository_ch.py  deal_repository_ch.py  history_deal_repository.py  liked_repository_ch.py  user_repository_ch.py
src/routers/: advert.py  common_try.py  deal.py  history_deal.py  liked.py  main.py  user.py
src/services/: advert_service.py  auth_service.py  category_service.py  deal_service.py  history_deal_service.py  liked_service.py
src/sql_builders/: advert_sql_builder.py  advert_sql_builder_ch.py  (+6 more)
(+41 files in other folders)
